# etl_medallion_test

./: .gitignore  README.md  pyproject.toml
config/: pipeline.yaml
job/: pipeline.py
tests/: test_pipeline.py
